# chores

./: .gitignore  README.md
backend/api/: .env  Dockerfile  app.py  models.py  pyproject.toml  scbeduler.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  quasar.config.ts
frontend/src/: main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: ChoreComponent.vue  ChoreTable.vue  CreateHousehold.vue  CustomChart.vue  CustomInput.vue  ErrorText.vue  GetAHouse.vue  HiddenButtons.vue  HouseholdView.vue  NavBar.vue  PopUp.vue  ResidentListView.vue  interface.ts  userRequest.ts
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CreateChore.vue  CreateHouse.vue  HousePage.vue  HouseholdPage.vue  IndexPage.vue  JoinHouse.vue  LoginPage.vue  ProfilePage.vue  RegisterPage.vue
frontend/src/router/: routes.ts
